<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="120dp"
        android:paddingEnd="16dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/input_username"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>