<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/input_username"
            android:inputType="text"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/iv_pass"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/pass" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>