<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:paddingBottom="60dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_repair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingTop="80dp"
                android:paddingEnd="60dp"
                android:paddingBottom="80dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/repair" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/repair"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingTop="80dp"
                android:paddingEnd="60dp"
                android:paddingBottom="80dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/payment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/payment"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingTop="80dp"
                android:paddingEnd="60dp"
                android:paddingBottom="80dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/communication" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/ask"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingTop="80dp"
                android:paddingEnd="60dp"
                android:paddingBottom="80dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/unhappy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/unhappy"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>